# atx-events

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  atx_events.db  constants.py  db_helper.py  events_api.py  main.py  pyproject.toml  requirements.txt  web_scraper.py
migrations/: env.py
migrations/versions/: 33f1c84d8a97_clean_up_hashpassword.py  4099553bc537_event_table_created.py  6e0c02b52f22_get_rid_of_userindb.py  82a0b0af605d_user_table_and_joining_tables.py  f2c6b5036bba_authentication_tables.py
project/: atx_events.db  db_helper.py  hello.py  pyproject.toml  web_scraper.py
src/: api.py  constants.py  db_helper.py  events_api.py  main_page.py  web_scraper.py
src/api/: main_api.py
src/data/: db_helper.py  db_models.py
src/pages/: profile.py
src/web_scrapping/: events_api.py  web_scraper.py
