[project]
name = "atx-events"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.115.0",
    "playwright>=1.47.0",
    "pre-commit>=3.8.0",
    "python-decouple>=3.8",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.34",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "pgcli>=4.1.0",
    "psycopg2-binary>=2.9.9",
    "ruff>=0.6.6",
]


[tool.ruff]
line-length = 120
target-version = 'py312'
show-fixes = true

exclude = [
    ".git",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "site-packages",
    "venv",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
skip-magic-trailing-comma = false
