[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "black>=24.8.0",
    "isort>=5.13.2",
    "requests>=2.32.3",
    "selenium>=4.24.0",
]

[tool.black]
line-length = 90
skip-magic-trailing-comma = false
skip-string-normalization = false
target-version = ['py310', 'py311', 'py312']
